--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,8 +20,7 @@
 
   <link rel="stylesheet" type="text/css" media="all" href="{{ '/styles/main.css' | prepend: site.baseurl | append: '?v=' | append: hash }}">
   {% if jekyll.environment == "production" and site.url == "https://ps5.chat" %}
-    <!--script async defer data-domain="ps5.chat" src="https://cassidyjam.es/scripts/script.js"></script-->
-    <script defer data-domain="ps5.chat" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="ps5.chat" src="https://tally.cloudflare2125.workers.dev/scripts/script.js"></script>
     <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
   {% endif %}
   <!-- {{ site.url }} -->
